--- a/ionic-pia/src/app/home/home.page.scss
+++ b/ionic-pia/src/app/home/home.page.scss
@@ -30,3 +30,13 @@
 .bttns{
   margin-top: 33%;
 }
+
+h1{
+  font-size: small;
+  margin-left: 15px;
+}
+.cuenta{
+  
+  border-bottom: 1px solid;
+  border-color:#8c8c8c;
+}
