--- a/ionic-pia/src/app/start/start.page.html
+++ b/ionic-pia/src/app/start/start.page.html
@@ -5,19 +5,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">start</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-title>En Construccion</ion-title>
-
-  <ion-button color="medium" (click) = "navHome()">
-    <ion-icon slot="start" name="caret-back-outline"></ion-icon>
-    regresar
-  </ion-button>
-
-  <ion-button color="medium" (click) = "generarPuntuacion()">Generar puntuacion</ion-button>
-  <ion-title>Puntuacion: {{puntuacion}}</ion-title>
+  
+  <app-cpu-player></app-cpu-player>
+  <app-tablero ></app-tablero>
+  <app-coleccion-cartas></app-coleccion-cartas>
 
 </ion-content>
