--- a/ionic-pia/src/app/home/home.page.html
+++ b/ionic-pia/src/app/home/home.page.html
@@ -1,10 +1,20 @@
 <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Content</ion-title>
+      <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">This is the menu content.</ion-content>
+  <ion-content class="ion-padding">
+    <div class="cuenta" style="display: flex; justify-content: flex-start; align-items: center;">
+
+      <ion-icon size = "large" slot="start" name="person-circle-outline"></ion-icon>
+          
+      <ion-text >
+        <h1>{{user.email}}</h1>
+      </ion-text>
+          
+    </div>
+  </ion-content>
 </ion-menu>
 
 <div class="ion-page" id="main-content">
