--- a/ionic-pia/src/app/start/tablero/tablero.page.html
+++ b/ionic-pia/src/app/start/tablero/tablero.page.html
@@ -6,7 +6,7 @@
     <app-carta-bk></app-carta-bk>
   </div>
   <div class="monton">
-    <carta [number] = "currentCard.number" [color] = "currentCard.color"></carta>
+    <carta [number] = "discardCard.number" [color] = "discardCard.color"></carta>
   </div>
 
 </div>
